// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StationExpandedView hides the fuel prices table when fuel_prices is empty 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      classname="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening Hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Amenities
        </h5>
        <div
          class="flex flex-wrap gap-2"
          data-testid="amenities-badges"
        >
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Car Wash
          </span>
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Toilets
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;

exports[`StationExpandedView renders the amenities empty state when amenities is empty 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      classname="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Fuel Prices
        </h5>
        <table
          class="w-full text-sm"
          data-testid="fuel-prices-table"
        >
          <thead>
            <tr
              class="border-b border-slate-400"
            >
              <th
                class="py-1 text-left font-normal text-gray-700"
              >
                Fuel Type
              </th>
              <th
                class="py-1 pl-4 text-right font-normal text-gray-700"
              >
                Price (pence/litre)
              </th>
              <th
                class="py-1 pl-4 text-right font-normal text-gray-700"
              >
                Last Updated
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Unleaded (E10)
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                132.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Super Unleaded (E5)
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                140.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Diesel
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                138.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening Hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Amenities
        </h5>
        <p
          class="text-sm text-gray-600"
        >
          No amenities listed.
        </p>
      </div>
    </div>
  </div>
</details>
`;

exports[`StationExpandedView renders the default expanded view with prices, hours and amenities 1`] = `
<details
  class="group tool-expand"
  data-testid="expandable-section"
>
  <summary
    class="text-magenta-500 flex [&::-webkit-details-marker]:hidden cursor-pointer py-2 outline-none focus:shadow-expander-focus underline hover:no-underline group"
  >
    <svgr-mock
      classname="group-open:rotate-[-180deg] text-magenta-500 shrink-0 w-5 mr-2"
    />
    <div
      class="hidden group-open:block"
    >
      Hide details
    </div>
    <div
      class="block group-open:hidden"
      data-testid="summary-block-title"
    >
      Show details
    </div>
  </summary>
  <div
    class="mb-4 text-gray-800 text-base leading-[28px] tracking-[0.18px] pt-2"
  >
    <div
      class="pt-4 space-y-6"
    >
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Fuel Prices
        </h5>
        <table
          class="w-full text-sm"
          data-testid="fuel-prices-table"
        >
          <thead>
            <tr
              class="border-b border-slate-400"
            >
              <th
                class="py-1 text-left font-normal text-gray-700"
              >
                Fuel Type
              </th>
              <th
                class="py-1 pl-4 text-right font-normal text-gray-700"
              >
                Price (pence/litre)
              </th>
              <th
                class="py-1 pl-4 text-right font-normal text-gray-700"
              >
                Last Updated
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Unleaded (E10)
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                132.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Super Unleaded (E5)
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                140.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
            <tr
              class="border-b border-slate-200"
            >
              <td
                class="py-1"
              >
                Diesel
              </td>
              <td
                class="py-1 pl-4 text-right font-medium"
              >
                138.9p
              </td>
              <td
                class="py-1 pl-4 text-right text-gray-600"
              >
                15/01/2025
              </td>
            </tr>
          </tbody>
        </table>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Opening Hours
        </h5>
        <div
          class="space-y-1"
          data-testid="opening-hours"
        >
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Monday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Tuesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm font-semibold"
          >
            <span>
              Wednesday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Thursday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Friday
            </span>
            <span>
              06:00 – 22:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Saturday
            </span>
            <span>
              07:00 – 21:00
            </span>
          </div>
          <div
            class="flex justify-between text-sm "
          >
            <span>
              Sunday
            </span>
            <span>
              08:00 – 20:00
            </span>
          </div>
        </div>
      </div>
      <div>
        <h5
          class="mb-2 font-bold text-gray-800"
        >
          Amenities
        </h5>
        <div
          class="flex flex-wrap gap-2"
          data-testid="amenities-badges"
        >
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Car Wash
          </span>
          <span
            class="border border-slate-400 rounded shadow-bottom-gray px-4 py-1 text-xs text-gray-800"
          >
            Toilets
          </span>
        </div>
      </div>
    </div>
  </div>
</details>
`;
